<resources>
    <string name="app_name">体型管理</string>
    <string name="not_yet_measure_message">まだ記録がありません。</string>
    <string name="prev_day">前日</string>
    <string name="next_day">翌日</string>
    <string name="prev_month">先月</string>
    <string name="next_month">翌月</string>
    <string name="settings">設定</string>
    <string name="back">戻る</string>
    <string name="record">記録する</string>
    <string name="date">日付</string>
    <string name="tall">身長</string>
    <string name="age">年齢</string>
    <string name="weight">体重</string>
    <string name="fat">体脂肪</string>
    <string name="kcal">カロリー</string>
    <string name="kcal_per_day">目標\n摂取カロリー</string>
    <string name="kcal_today">今日の摂取カロリー：</string>
    <string name="weight_unit">体重 [kg]</string>
    <string name="fat_unit">体脂肪率 [%]</string>
    <string name="dot">.</string>
    <string name="unit_kg">kg</string>
    <string name="unit_cm">cm</string>
    <string name="unit_percent">%</string>
    <string name="unit_hour">時</string>
    <string name="unit_minute">分</string>
    <string name="unit_kcal">kcal</string>
    <string name="unit_number">個</string>
    <string name="delete">削除</string>
    <string name="cancel">キャンセル</string>
    <string name="sunday">日</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>
    <string name="increase">増加</string>
    <string name="decrease">減少</string>
    <string name="enable_update">アップデート可能</string>
    <string name="label_photo">写真</string>

    <!-- ユーザ設定 -->
    <string name="label_user_name">▪️ユーザ名</string>
    <string name="placeholder_user_name">名前</string>
    <string name="placeholder_birth">例：1999年01月1日</string>
    <string name="placeholder_tall">例：168.5 cm</string>
    <string name="placeholder_current_weight">例：50.5 kg</string>
    <string name="birth">️️▪️誕生日</string>
    <string name="current_weight">現在体重</string>
    <string name="gender">️️▪️性別</string>
    <string name="gender_male">男性</string>
    <string name="gender_female">女性</string>
    <string name="label_option">▪️オプション機能</string>
    <string name="label_option_describe">不要な機能を隠すことができます</string>
    <string name="label_meal_feature">食事記録</string>
    <string name="label_training_feature">トレーニング記録</string>

    <!-- トップ画面 -->
    <string name="label_reserve">まずは体型を登録しましょう</string>
    <string name="label_registered_date">登録日</string>
    <string name="label_target_weight">目標体重</string>
    <string name="label_start_weight">開始体重</string>
    <string name="label_target_kcal">摂取カロリー</string>
    <string name="title_set_object">目標を設定</string>
    <string name="message_set_object">目標を設定すると、モチベーションの維持に役立ちます</string>
    <string name="label_set_object">目標を設定</string>
    <string name="label_update_object">更新</string>
    <string name="label_from_start">開始体重から</string>
    <string name="label_until_object">目標体重まで</string>
    <string name="label_bmi">BMI</string>
    <string name="label_kcal">基礎代謝</string>
    <string name="label_fat">体脂肪率</string>
    <string name="label_compare">体型写真を比較してみる</string>
    <string name="label_photos">体型写真をみる</string>
    <string name="label_see_by_statistics">統計を見る</string>
    <string name="label_see_by_training_menu">トレーニングメニューを見る</string>
    <string name="label_see_meal">登録した食べ物を見る</string>
    <string name="label_see_by_today">今日の記録へ</string>
    <string name="label_see_statistic">統計</string>
    <string name="label_start_point">開始点</string>
    <string name="label_good_weight">適正な体重</string>
    <string name="label_healthy_weight">健康的な体重</string>
    <string name="label_ideal_weight">理想的な体重</string>
    <string name="message_this_is_estimated_value">※ 18歳から79歳の方に妥当性が認められた推定値です</string>
    <string name="label_add_meal">食事登録</string>
    <string name="label_add_measure">体型登録</string>
    <string name="label_add_training">トレ記録</string>
    <string name="message_not_registered_today">本日の登録はまだありません</string>
    <string name="label_today_total_kcal">摂取カロリー</string>
    <string name="label_today_min_weight">最小体重</string>
    <string name="label_today_you">本日の記録</string>
    <string name="label_training">トレーニング</string>
    <string name="label_did_training">トレーニング済</string>
    <string name="label_weight_bmi_22">BMIが22の場合の体重</string>
    <string name="label_weight_bmi_18_25">BMIが18.5から24.9の体重</string>
    <string name="label_first_save_your_body">まずは体重を登録しましょう！</string>

    <!-- 測定一覧-->
    <string name="message_saved">登録しました</string>
    <string name="message_edited">編集しました</string>
    <string name="message_deleted">削除しました</string>
    <string name="message_empty_so_add">この日の登録はありません</string>
    <string name="label_meals">食事内容</string>
    <string name="label_total_kcal">合計カロリー</string>
    <string name="message_empty_photo">写真が未登録です</string>
    <string name="label_this_day_photos">この日撮影した写真</string>
    <string name="label_tall_with_unit">身長[cm]</string>
    <string name="label_total_kcal_per_day">摂取カロリー</string>
    <!-- 設定 -->
    <string name="label_notify_at_seven">毎朝7時に通知</string>

    <!-- 投稿画面 -->
    <string name="hint_fat">体脂肪率</string>
    <string name="hint_weight">体重</string>
    <string name="hint_time">時間</string>
    <string name="hint_memo">メモ</string>
    <string name="hint_memo_placeholder">ここにメモを記入することができます</string>
    <string name="save">保存</string>
    <string name="message_tap_and_add_photo">タップで写真を追加</string>

    <!-- 比較画面 -->
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="compare">比較</string>
    <string name="history">履歴</string>
    <string name="message_confirm_delete_history">履歴を削除しますがよろしいですか？</string>
    <string name="message_please_set_photo_for_compare">比較する写真を設定してください</string>
    <string name="message_not_yet_saved_history">比較がまだ保存されていません</string>
    <string name="message_not_yet_taken_measure_with_photo">写真付きの登録がまだありません\nまずは写真付きの体型を記録しましょう</string>

    <!-- グラフ画面 -->
    <string name="message_empty">体型を登録するとグラフが表示されます</string>
    <string name="message_recent_data_is_shown">最後に測定した日から直近のデータを表示しています</string>
    <string name="label_one_month">1ヶ月</string>
    <string name="label_three_month">3ヶ月</string>
    <string name="label_six_month">6ヶ月</string>
    <string name="label_one_year">12ヶ月</string>
    <string name="label_all_duration">全期間</string>
    <string name="label_weight_y_weight">"体重 [kg]"</string>
    <string name="label_weight_y_fat">"体脂肪率 [%]"</string>

    <!-- カメラ画面 -->
    <string name="label_back">戻る</string>
    <string name="label_next">次へ</string>

    <!-- 写真一覧 -->
    <string name="message_no_photo">写真を登録すると表示されます</string>

    <!-- 画面タイトル-->
    <string name="screen_name_settings">設定</string>
    <string name="screen_name_graph">グラフ</string>
    <string name="screen_name_choose_compare_photo">写真を選択してください</string>

    <!-- 食事登録 -->
    <string name="label_breakfast">朝食</string>
    <string name="label_lunch">昼食</string>
    <string name="label_dinner">夕食</string>
    <string name="label_snack">間食</string>
    <string name="message_add">追加</string>
    <string name="label_all_kcal">合計カロリー</string>
    <string name="message_search_and_add">検索して食べ物を登録しましょう</string>
    <string name="label_result_of_search">検索結果</string>
    <string name="message_save_and_add">新規追加</string>
    <string name="message_add_food">追加</string>
    <string name="label_number">個数</string>

    <!-- 電卓UI -->
    <string name="label_number_1">1</string>
    <string name="label_number_2">2</string>
    <string name="label_number_3">3</string>
    <string name="label_number_4">4</string>
    <string name="label_number_5">5</string>
    <string name="label_number_6">6</string>
    <string name="label_number_7">7</string>
    <string name="label_number_8">8</string>
    <string name="label_number_9">9</string>
    <string name="label_number_C">C</string>
    <string name="label_number_0">0</string>
    <string name="label_number_dot">.</string>
    <string name="label_record">記録する</string>

    <!-- ボトムナビゲーション -->
    <string name="label_home">ホーム</string>
    <string name="label_calendar">カレンダー</string>
    <string name="label_graph">グラフ</string>

    <!-- 統計 -->
    <string name="label_current_you">現在のあなた</string>
    <string name="label_result_diagnosis">診断結果</string>
    <string name="label_result_diagnosis_too_low">痩せすぎです</string>
    <string name="label_result_diagnosis_good">健康な体重の範囲内です</string>
    <string name="label_result_diagnosis_too_weight">太り過ぎです</string>

    <!-- トレーニング登録 -->
    <!-- 部位 -->
    <string name="label_all">すべて</string>
    <string name="label_type_chest">胸</string>
    <string name="label_type_shoulder">肩</string>
    <string name="label_type_back">背中</string>
    <string name="label_type_arm">腕</string>
    <string name="label_type_abdominal">腹筋</string>
    <string name="label_type_hip">尻</string>
    <string name="label_type_leg">脚</string>
    <string name="label_type_else">その他</string>

    <!-- 登録画面 -->
    <string name="label_start_training_time">開始時間</string>
    <string name="label_end_training_time">終了時間</string>
    <string name="label_register_training">登録する</string>
    <string name="label_update_training">更新する</string>
    <string name="label_input_all">一括入力</string>
    <string name="label_memo_area">メモ欄</string>
    <string name="label_memo_area_training">トレーニングメモ</string>
    <string name="label_set">#%1$d</string>
    <string name="label_event">%1$d種目目</string>
    <string name="label_count">回</string>
    <string name="label_distance_unit">km</string>
    <string name="label_minute_unit">分</string>
    <string name="label_weight_unit">kg</string>
    <string name="label_empty">-</string>
    <string name="label_object">目標</string>
    <string name="label_rep_num">レップ数</string>
    <string name="label_weight">重量</string>
    <string name="label_distance">距離</string>
    <string name="label_minutes">時間</string>

    <!-- カレンダー -->
    <string name="label_has_training">トレ済</string>

    <!-- タイプ-->
    <string name="label_type">タイプ</string>
    <string name="label_machine">マシン</string>
    <string name="label_free">フリーウェイト</string>
    <string name="label_own_weight">自重</string>
    <string name="label_cardio">有酸素</string>

    <!-- トレーニングメニュー一覧 -->
    <string name="label_menu_type_name">種目</string>
    <string name="label_training_target_part">部位</string>
    <string name="label_training_content">内容</string>
    <string name="label_see_training_history">成長を見る</string>
    <string name="label_edit">編集する</string>
    <string name="label_training_target_part_selected">部位：%1$s</string>
    <string name="label_training_target_type_selected">タイプ：%1$s</string>

    <!-- 食べ物一覧 -->
    <string name="label_food_name">名前：</string>
    <string name="label_food_kcal">熱量：</string>
    <string name="label_empty_food">食べ物が登録されていません</string>

    <!-- 写真詳細 -->
    <string name="label_photo_detail_photo_date">撮影日時：%s</string>
    <string name="label_photo_detail_weight">体重：%skg</string>
    <string name="label_photo_detail_fat">体脂肪率：%1$s%%</string>
    <string name="label_photo_detail_bmi">BMI：%1$s%%</string>

</resources>