<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.app.body_manage.ui.measure.form.BodyMeasureEditFormViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ScrollView
            android:id="@+id/add_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbarFadeDuration="0"
            app:layout_constraintBottom_toTopOf="@id/save_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <!--時刻入力-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/training_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_time"
                    android:paddingBottom="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_baseline_access_time_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/time_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- 体重-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_weight"
                    android:paddingBottom="20dp"
                    app:layout_constraintTop_toBottomOf="@id/training_time"
                    app:startIconDrawable="@drawable/ic_baseline_accessibility_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/weight_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_fat"
                    app:layout_constraintTop_toBottomOf="@id/weight"
                    app:startIconDrawable="@drawable/ic_baseline_opacity_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fat_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/prev_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fat" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:backgroundTint="@color/nonAccent"
            android:contentDescription="@null"
            android:src="@drawable/ic_baseline_photo_camera_24"
            app:layout_constraintBottom_toTopOf="@id/save_container"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/save_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <Button
                android:id="@+id/back_btn"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:text="@string/back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/save_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/save_btn"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:text="@string/record"
                app:layout_constraintLeft_toRightOf="@id/back_btn"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>